Fix confirmation timeframe

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -4,7 +4,7 @@
         A verified instructor account at OpenStax gives you access to all
         instructor-only resources for our books, like test banks, answer
         guides, and more. We manually verify all instructor account requests,
-        so you’ll hear back in three to four business days about your
+        so you’ll hear back in two to three business days about your
         approval. Fill out and the information below to get started!
     </p>
 </div>
