--- a/src/app/pages/finished-verify/finished-verify.hbs
+++ b/src/app/pages/finished-verify/finished-verify.hbs
@@ -2,7 +2,10 @@
     <div class="text-content subhead">
         <h1>Thank you for applying for an instructor account!</h1>
         <p>
-            We manually verify all instructor account requests to ensure that educator resources stay in the right hands, so we’ll email you in the next 3 to 4 business days about your approval. Once approved, you will be able to access all of our instructor-only resources.
+            We manually verify all instructor account requests to ensure that educator
+            resources stay in the right hands, so we’ll email you in the next 2 to 3
+            business days about your approval. Once approved, you will be able to access
+            all of our instructor-only resources.
         </p>
     </div>
 </div>
