Implement Community Content Portal Link
Plug in text and url from CMS, if available. Otherwise, it’s labeled
UNAVAILABLE and links to /404

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -72,6 +72,14 @@
                 </p>
                 <div id="instructor-resources" class="resource"></div>
             </div>
+            <div id="community-resources" class="row">
+                <h3>Community Resources</h3>
+                <p>
+                    Share your own resources or use resources submitted by other
+                    members of the education community for your OpenStax book.
+                </p>
+                <a href="/404" class="btn btn-orange">Unavailable</a>
+            </div>
             <div class="row">
                 <h3>Partner Resources</h3>
                 <p>
