--- a/src/app/pages/support/support.scss
+++ b/src/app/pages/support/support.scss
@@ -34,17 +34,15 @@
             flex-direction: column;
             justify-content: space-between;
             margin: 1.5rem;
-            min-width: 20rem;
+            min-width: 25rem;
             padding: 1.5rem;
 
-            @include tablet {
-                flex-basis: 28%;
-                max-width: calc(50% - 3rem);
+            @media (min-width: 600px) {
+                flex-basis: calc(50% - 3rem);
             }
 
-            @include desktop {
-                flex-basis: 12%;
-                max-width: calc(50% - 3rem);
+            @media (min-width: 1150px) {
+                flex-basis: calc(25% - 3rem);
             }
 
             .name {
