--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,4 +1,4 @@
-<div class="home-page hidden">
+<template args="model">
     <main id="maincontent">
         <div class="book-banners"></div>
         <span class="scrolldown-chevron"><a href="#education"><i class="fa fa-chevron-down"></i></a></span>
@@ -6,4 +6,4 @@
         <div id="education" class="education"></div>
         <div class="buckets"></div>
     </main>
-</div>
+</template>
