Fix all sections of home page
Include parallaxInterval to adjust banner background height as page
scrolls.

--- a/src/app/components/buckets/bucket/bucket.html
+++ b/src/app/components/buckets/bucket/bucket.html
@@ -3,7 +3,7 @@
     <div class="quote">
         <div>
             <span class="title">{model.titleText}</span>
-            <span class="blurb"></span>
+            <blurb-html class="blurb"></blurb-html>
         </div>
         <a class="btn {model.btnClass}" href="{model.linkUrl}">{model.linkText}</a>
     </div>
