--- a/src/app/pages/home/banners/banner.html
+++ b/src/app/pages/home/banners/banner.html
@@ -1,4 +1,5 @@
 <template args="model">
+    <div class="background-image"></div>
     <div class="container">
         <div each="feature in model.features" class="{`${feature} feature fly${model.fly}`}"></div>
         <div class="{`book fly${model.fly}`}"></div>
