--- a/src/app/pages/home/education/education.scss
+++ b/src/app/pages/home/education/education.scss
@@ -18,7 +18,7 @@
 }
 
 .education-banner {
-    background-attachment: fixed;
+    background-attachment: local;
     background-image: url('/images/home/education/background.jpg');
     background-repeat: no-repeat;
     background-size: cover;
