Hotfix: update Community Resources language

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -75,8 +75,9 @@
             <div id="community-resources" class="row">
                 <h3>Community Resources</h3>
                 <p>
-                    Share your own resources or use resources submitted by other
-                    members of the education community for your OpenStax book.
+                    Find community-submitted resources for
+                    <span class="your-book-title">this</span> book,
+                    or share your own.
                 </p>
                 <a href="/404" class="btn btn-orange">Unavailable</a>
             </div>
