--- a/src/app/pages/article/article.scss
+++ b/src/app/pages/article/article.scss
@@ -40,6 +40,10 @@
     .author {
         color: color(cyan);
         font-style: italic;
+
+        &::after {
+            content: ' | ';
+        }
     }
 
     .body {
