--- a/src/app/pages/article/article.html
+++ b/src/app/pages/article/article.html
@@ -1,16 +1,25 @@
-<div class="article page">
-    <div class="hero">
-        <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-    </div>
-    <div class="boxed">
-        <h1 data-id="title"></h1>
-        <h2 data-id="subheading"></h2>
-        <div class="meta">
-            <p><span class="author" data-id="author"></span>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
+<template args="model">
+    <div class="article page">
+        <div class="hero" style="{backgroundImage: `url(${model.article_image})`}">
+            <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         </div>
-        <div class="body"></div>
-        <div class="tags" data-id="tags"></div>
-        <div id="disqus_thread" class="disqus"></div>
+        <div class="boxed">
+            <h1>{model.title}</h1>
+            <if condition="model.subheading">
+                <h2>{model.subheading}</h2>
+            </if>
+            <div class="meta">
+                <p>
+                    <span class="author">{model.author}</span>
+                    <span class="date">{model.date}</span>
+                </p>
+            </div>
+            <div class="body"></div>
+            <if condition="model.tags">
+                <div class="tags">{model.tags}</div>
+            </if>
+            <div id="disqus_thread" class="disqus"></div>
+        </div>
+        <div class="articles"></div>
     </div>
-    <div class="articles"></div>
-</div>
+</template>
