--- a/src/app/pages/blog/article/article.html
+++ b/src/app/pages/blog/article/article.html
@@ -1,12 +1,11 @@
 <template args="model">
-    <div class="img"></div>
+    <div class="img" style="{backgroundImage: `url(${model.coverUrl})`}"></div>
     <div class="content">
         <h2><a href="{`/blog/${model.articleSlug}`}">{model.title}</a></h2>
         <div class="body"></div>
         <div class="meta">
             <p>
                 <span class="author">{model.author}</span>
-                <span> | </span>
                 <span class="date">{model.date}</span>
             </p>
         </div>
