--- a/src/app/pages/blog/blog.scss
+++ b/src/app/pages/blog/blog.scss
@@ -1,2 +1,10 @@
 @import 'variables';
 @import 'mixins';
+
+.blog.page {
+    .content .meta {
+        .author::after {
+            content: ' | ';
+        }
+    }
+}
