--- a/src/app/pages/blog/pinned-article/pinned-article.html
+++ b/src/app/pages/blog/pinned-article/pinned-article.html
@@ -1,10 +1,16 @@
-<div class="img"></div>
-<div class="content">
-    <h2><a href="/blog/{{articleSlug}}">{{title}}</a></h2>
-    {{#if subheading}}<h3>{{subheading}}</h3>{{/if}}
-    <div class="body"></div>
-
-    <div class="meta">
-        <p><span class="author">{{author}}</span>  &nbsp;|&nbsp;  <span class="date" data-id="date"></span></p>
+<template args="model">
+    <div class="img" style="{backgroundImage: `url(${model.coverUrl})`}"></div>
+    <div class="content">
+        <h2><a href="/blog/{model.articleSlug}">{model.title}</a></h2>
+        <if condition="model.subheading">
+            <h3>{model.subheading}</h3>
+        </if>
+        <div class="body"></div>
+        <div class="meta">
+            <p>
+                <span class="author">{model.author}</span>
+                <span class="date">{model.date}</span>
+            </p>
+        </div>
     </div>
-</div>
+</template>
