Send email with Finish Profile form
Email is stored with cookies and will automatically be populated in a
hidden field.

--- a/src/app/pages/finish-profile/finish-profile.hbs
+++ b/src/app/pages/finish-profile/finish-profile.hbs
@@ -18,6 +18,7 @@
                 <input type=hidden name="first_name" />
                 <input type=hidden name="last_name" />
                 <input type=hidden name="user_id" />
+                <input type=hidden name="email" />
                 <input type=hidden name="OS_Accounts_ID__c" />
             </div>
             <div class="labeled-inputs row">
