Fix Subjects page
Fix: subject filter, get-this-book menus and submenus, setting filter
from current path, setting path from filter

--- a/src/app/components/get-this-title/get-this-title.scss
+++ b/src/app/components/get-this-title/get-this-title.scss
@@ -5,6 +5,12 @@
 .get-this-title {
     .remover {
         @include absolute(top 0 right 0);
+
+        cursor: pointer;
+        font-size: 2rem;
+        font-weight: bold;
+        line-height: 1rem;
+        text-align: center;
     }
 
     .submenu {
