--- a/src/app/pages/subjects/category-section/book/book.html
+++ b/src/app/pages/subjects/category-section/book/book.html
@@ -1,7 +1,9 @@
-<img src="{{coverUrl}}" alt="book cover">
-<div class="details">
-    <div class="get-this-title-container"></div>
-    <div class="cta">
-        <a href="/details/{{slug}}" class="btn">details &amp; resources</a>
+<template args="model">
+    <img src="{model.coverUrl}" alt="book cover">
+    <div class="details">
+        <div class="get-this-title-container" skip="true"></div>
+        <div class="cta">
+            <a href="/details/{model.slug}" class="btn">details & resources</a>
+        </div>
     </div>
-</div>
+</template>
