--- a/src/app/pages/subjects/subjects.scss
+++ b/src/app/pages/subjects/subjects.scss
@@ -16,7 +16,7 @@
         }
     }
 
-    .container[data-manager="page-description"] {
+    .container[data-html="page_description"] {
         padding: 6rem 1.5rem 9rem;
 
         @include desktop {
