--- a/src/app/pages/subjects/subjects.html
+++ b/src/app/pages/subjects/subjects.html
@@ -1,26 +1,26 @@
-<div class="container" data-manager="page-description"></div>
+<template args="model">
+    <div class="container" data-html="page_description" skip="true"></div>
 
-<div class="books">
-    <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
-    <div class="filter">
-        <div class="filter-buttons"></div>
-    </div>
-    <div class="container"></div>
-    <div class="feature-block">
-        <div class="container">
-            <h2>About Our Textbooks</h2>
-            <div class="blurb">
-                <h3 class="title" data-manager="ds1-head"></h3>
-                <p class="text" data-manager="ds1-body"></p>
-            </div>
-            <div class="blurb">
-                <h3 class="title" data-manager="ds2-head"></h3>
-                <p class="text" data-manager="ds2-body"></p>
-            </div>
-            <div class="blurb">
-                <h3 class="title" data-manager="ds3-head"></h3>
-                <p class="text" data-manager="ds3-body"></p>
+    <div class="books">
+        <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
+        <div class="filter" skip="true"></div>
+        <div class="container" skip="true"></div>
+        <div class="feature-block">
+            <div class="container">
+                <h2>About Our Textbooks</h2>
+                <div class="blurb">
+                    <h3 class="title">{model.dev_standard_1_heading}</h3>
+                    <p class="text" data-html="dev_standard_1_description" skip="true"></p>
+                </div>
+                <div class="blurb">
+                    <h3 class="title">{model.dev_standard_2_heading}</h3>
+                    <p class="text" data-html="dev_standard_2_description" skip="true"></p>
+                </div>
+                <div class="blurb">
+                    <h3 class="title">{model.dev_standard_3_heading}</h3>
+                    <p class="text" data-html="dev_standard_3_description" skip="true"></p>
+                </div>
             </div>
         </div>
     </div>
-</div>
+</template>
