--- a/src/app/pages/details/details-loaded.html
+++ b/src/app/pages/details/details-loaded.html
@@ -8,7 +8,7 @@
                         <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
                         <div class="table-of-contents {model.tocIsOpen ? '' : 'hidden'}">
                             <div class="box mac-scroll">
-                                <div class="toc-remover"></div>
+                                <div class="toc-remover"><i class="fa fa-times" aria-hidden="true"></i></div>
                                 <table-of-contents skip="true"></table-of-contents>
                             </div>
                         </div>
