--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -77,7 +77,7 @@
                     <label>How are you using this book?
                         <div skip="true"></div>
                         <select name="00NU00000055spw">
-                            <option value="None" disabled selected></option>
+                            <option selected disabled></option>
                             <option each="option in model.salesforce.adoption.options" value="{option.value}">{option.text}</option>
                         </select>
                     </label>
