--- a/src/app/components/select/select.html
+++ b/src/app/components/select/select.html
@@ -1,18 +1,22 @@
 <template args="model">
-    <ul class="tags">
-        <if condition="model.selected.length">
-            <li each="tag in model.selected">
-                <span class="label">{tag.text}</span>
-                <span class="remover">×</span>
-            </li>
-        <else>
-            <li>
-                <span class="label">None</span>
-                <span class="remover">×</span>
-            </li>
-        </if>
-    </ul>
+    <if condition="model.select.multiple">
+        <ul class="tags">
+            <if condition="model.selected.size">
+                <li each="tag in model.selected">
+                    <span class="label">{$value}</span>
+                    <span class="remover">×</span>
+                </li>
+            <else>
+                <li>
+                    <span class="label">None</span>
+                    <span class="remover">×</span>
+                </li>
+            </if>
+        </ul>
+    <else>
+        <span each="item in model.selected" class="item">{$value}</span>
+    </if>
     <ul class="options{model.open ? ' open' : ''}">
-        <li each="option in model.options" class="option">{option.text}</li>
+        <li each="option in model.options" class="option" data-value="{$item}">{$value}</li>
     </ul>
 </template>
