--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -1,6 +1,6 @@
 <template args="model">
     <div class="subhead text-content">
-        <h1>Let us know you're using OpenStax</h1>
+        <h1>Let us know you’re using OpenStax</h1>
         <p>Our books and their accompanying resources are yours to use, free.</p>
         <p>
             Help us continue to make high-quality educational materials accessible by
