One Confirmation page to rule them all
Replace adoption-confirmation, comp-copy-confirmation,
faculty-confirmation, finished-verify, finished-no-verify,
interest-confirmation with confirmation page that takes query string.

--- a/src/app/pages/confirmation/confirmation.scss
+++ b/src/app/pages/confirmation/confirmation.scss
@@ -4,9 +4,19 @@
 .confirmation-page {
     .subhead {
         padding-bottom: 8rem;
+
+        a {
+            color: color(yellow);
+        }
     }
 
     .strips {
         margin-bottom: 0;
     }
+
+    .calculator {
+        padding-bottom: 8rem;
+        padding-top: 0;
+    }
+
 }
