--- a/src/app/pages/comp-copy/comp-copy.html
+++ b/src/app/pages/comp-copy/comp-copy.html
@@ -17,7 +17,7 @@
          <div>
             <input name="utf8" type="hidden" value="✓">
             <input type=hidden name="oid" value="00DU0000000Kwch">
-            <input type=hidden name="retURL" value="{`${window.location.origin}/comp-copy-confirmation`}">
+            <input type=hidden name="retURL" value="{`${window.location.origin}/confirmation?comp-copy`}">
             <input type=hidden name="lead_source" value="Comp Request">
         </div>
 
