--- a/src/app/pages/faculty-verification/faculty-verification.html
+++ b/src/app/pages/faculty-verification/faculty-verification.html
@@ -16,7 +16,7 @@
             <div>
                 <input name="utf8" type="hidden" value="✓">
                 <input type="hidden" name="oid" value="00DU0000000Kwch">
-                <input type="hidden" name="retURL" value="{`${window.location.origin}/faculty-confirmation`}">
+                <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?faculty`}">
                 <input type="hidden" name="lead_source" value="OSC Faculty">
                 <input type="hidden" name="user_id">
                 <input type="hidden" name="OS_Accounts_ID__c">
