--- a/src/app/pages/finish-profile/finish-profile.html
+++ b/src/app/pages/finish-profile/finish-profile.html
@@ -11,7 +11,7 @@
         <div>
             <input name="utf8" type="hidden" value="✓">
             <input type="hidden" name="oid" value="00DU0000000Kwch">
-            <input type="hidden" name="retURL" value="{`${window.location.origin}/finished-no-verify`}">
+            <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?unverified`}">
             <input type="hidden" name="lead_source" value="OSC User">
             <input type="hidden" name="first_name">
             <input type="hidden" name="last_name">
