--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -17,7 +17,7 @@
         <div>
             <input name="utf8" type="hidden" value="✓">
             <input type="hidden" name="oid" value="00DU0000000Kwch">
-            <input type="hidden" name="retURL" value="{`${window.location.origin}/adoption-confirmation`}">
+            <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?adoption`}">
             <input type="hidden" name="lead_source" value="Renewal Form">
         </div>
         <div class="labeled-inputs row">
