--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -14,9 +14,10 @@
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div class="text-content labeled-inputs row book-info">
             <div class="text-content add-another">
-               <h2>{model.adoptionQuestion}</h2>
-                <a href="{model.adoptionUrl}" title="add another book" class="btn">{model.adoptionLinkText}</a>
-                <a href="/subjects" title="go back to our books" class="btn btn-secondary">{model.subjectLinkText}</a>
+                <h2>{model.adoptionQuestion}</h2>
+                <a href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="btn">{model.adoptionLinkText}</a>
+                <a if="model.subjectLinkText"
+                    href="/subjects" title="{model.subjectLinkText}" class="btn btn-secondary">{model.subjectLinkText}</a>
             </div>
         </div>
     </div>
