--- a/src/app/components/select/select.html
+++ b/src/app/components/select/select.html
@@ -8,7 +8,7 @@
                 </li>
             <else>
                 <li>
-                    <span class="label">None</span>
+                    <span class="label none">None</span>
                 </li>
             </if>
         </ul>
