Update pages to use select handler

--- a/src/app/pages/comp-copy/comp-copy.html
+++ b/src/app/pages/comp-copy/comp-copy.html
@@ -60,6 +60,7 @@
     <div class="col">
         <label>
             <span>Book Requested</span>
+            <div skip="true"></div>
             <select name="00NU00000053nzR" required>
                 <option value="" disabled selected>Please Select</option>
                 <option value="Anatomy & Physiology">Anatomy and Physiology</option>
@@ -92,6 +93,7 @@
     <div class="col">
         <label class="form-item">
             Have you adopted an OpenStax textbook?
+            <div skip="true"></div>
             <select name="00NU00000055sqB">
                 <option type="radio" name="have_adopted" value="1">Yes</option>
                 <option type="radio" name="have_adopted" checked value="0">No</option>
@@ -100,6 +102,7 @@
 
         <label>
             Decision date
+            <div skip="true"></div>
             <select name="00NU00000052i3K">
                 <option value="Fall" selected>Fall</option>
                 <option value="Spring">Spring</option>
