--- a/src/app/pages/finish-profile/already-using/already-using.html
+++ b/src/app/pages/finish-profile/already-using/already-using.html
@@ -1,4 +1,5 @@
 <label>Title you are already using
+    <div skip="true"></div>
     <select name="00NU00000053nzR" required>
         <!-- FIX: Manipulate model data to avoid multiple loops -->
         <option each="title in bookTitles" if="title.text" value="{title.value}">{title.text}</option>
