--- a/src/app/components/select/select.scss
+++ b/src/app/components/select/select.scss
@@ -111,6 +111,7 @@ select {
         left: 0;
         margin: 0;
         max-height: 20rem;
+        overflow-x: hidden;
         overflow-y: scroll;
         padding: 0;
         position: absolute;
