--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -15,6 +15,7 @@
                     <input type="hidden" name="external" value="1">
                     <label>
                         What is your question about?
+                        <div skip="true"></div>
                         <select name="subject">
                             <option each="subject in model.subjects" value="{subject}">{subject}</option>
                         </select>
