--- a/src/app/pages/faculty-verification/faculty-verification.html
+++ b/src/app/pages/faculty-verification/faculty-verification.html
@@ -70,6 +70,7 @@
                     </label>
                     <label>
                         <span>Are you already using OpenStax in your courses?</span>
+                        <div skip="true"></div>
                         <select name="00NU00000055spw"></select>
                     </label>
                 </div>
@@ -80,6 +81,7 @@
                         <input name="00NU00000052VId" type="number" min="1" required>
                     </label>
                     <label>Your OpenStax book:
+                        <div skip="true"></div>
                         <select name="00NU00000053nzR" required>
                             <option value="" disabled selected></option>
                             <!-- FIX: Manipulate model data to avoid multiple loops -->
