--- a/src/app/pages/finish-profile/faculty-section/faculty-section.html
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.html
@@ -21,8 +21,8 @@
         </label>
         <label>
             <span>Are you already using OpenStax in your courses?</span>
-            <select name="00NU00000055spw">
-            </select>
+            <div skip="true"></div>
+            <select name="00NU00000055spw"></select>
         </label>
         <label class="form-hidden">
             <span>Not required</span>
