--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -57,6 +57,7 @@
             <div class="col">
                 <label>Which OpenStax College textbook(s) are you interested in adopting?
                     <span class="select-instructions">Select at least one.</span>
+                    <div skip="true"></div>
                     <select name="00NU00000053nzR" multiple required>
                         <!-- FIX: Manipulate model data to avoid multiple loops -->
                         <option each="title in titles" if="title.text" value="{title.value}">{title.text}</option>
@@ -73,6 +74,7 @@
                     Which partners may we share your information with so they may contact you about
                     additional resources supporting the OpenStax College books?
                     <span class="select-instructions">You may select more than one.</span>
+                    <div skip="true"></div>
                     <select name="00NU00000055spm" multiple>
                         <option value="Online homework providers">
                             Online homework providers
@@ -91,6 +93,7 @@
 
                 <label class="question">How did you hear about OpenStax College?
                     <span class="select-instructions">Select at least one.</span>
+                    <div skip="true"></div>
                     <select name="00NU00000055spr" multiple required>
                         <option value="Web search">Web search</option>
                         <option value="Colleague">Colleague</option>
